[metadata]
description-file = README.md

[aliases]
test = pytest

[coverage:run]
branch = True
source = howfairis

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html

[tool:isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = howfairis

[bumpversion]
current_version = 0.1.0

; [bumpversion:file:setup.py]
; search = version="{current_version}"
; replace = version="{new_version}"

[bumpversion:file:howfairis/__version__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
